create uploadStudentAvatar